# distributed-agents

./: ARCHITECTURE.md  README.md  SEQUENCE_DIAGRAM.py  __init__.py  pyproject.toml
core/: __init__.py  graph.py  orchestrator.py  register.py  state.py  worker.py
distributed/: __init__.py  distributed_orchestrator.py  message_bus.py  redis_backend.py
example/: conditional_workflow.py  distributed_workflow.py  llm_agents.py  simple_workflow.py
