[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-agents"
version = "0.1.0"
description = "A distributed agentic AI framework for building scalable workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mostafa Uddin", email = "mostafa.uddin@gmail.com"}
]
keywords = [
    "ai",
    "agents",
    "workflow",
    "distributed",
    "llm",
    "langgraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "distributed-agents[redis,dev]",
]

[project.urls]
Homepage = "https://github.com/mostafau/distributed-agents"
Documentation = "https://github.com/mostafau/distributed-agents#readme"
Repository = "https://github.com/mostafau/distributed-agents"
Issues = "https://github.com/mostafau/distributed-agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["distributed_agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=distributed_agents"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
